# mcpi-api-rust

./: Cargo.toml  README.md
src/: lib.rs
tests/: base.rs  entity.rs  player.rs
