[package]
name = "mcpi_api"
version = "0.1.0"
authors = ["blackfur <64478051+theblackfurguy@users.noreply.github.com>"]
edition = "2018"
description = "Wrapper for the Minecraft Pi Edition API handling parsing and other aspects for you"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TheBlackfurGuy/mcpi-api-rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
